- -运行稳定版本